# ps-bot

./: .gitignore  CLAUDE.md  README.md  pytest.ini  requirements-dev.txt
apps/crawler/: README.md  pyproject.toml
apps/crawler/src/crawler/: __init__.py  controller.py  follow_coordinator.py  main.py
apps/pi_car/: README.md  pyproject.toml
apps/pi_car/src/pi_car/: __init__.py  camera.py  controller.py  main.py
apps/robot_control/: README.md  pyproject.toml
apps/robot_control/src/robot_control/: __init__.py  __main__.py  connection_screen.py  controller.py  hud.py  main.py  protocol.py  robot_client.py  settings.py  video_stream.py
apps/test_app/: README.md  pyproject.toml
apps/test_app/src/test_app/: main.py  robot_server_printer.py
apps/test_app/tests/: test_main.py
apps/zero_servo/: README.md  pyproject.toml
apps/zero_servo/src/zero_servo/: __init__.py  main.py
libs/shared_lib/: README.md  pyproject.toml
libs/shared_lib/src/shared_lib/: __init__.py  core.py  pid.py
libs/shared_lib/src/shared_lib/detection/: __init__.py  efficientdet_detector.py  person_detector.py
libs/shared_lib/src/shared_lib/drive_state/: __init__.py  state.py
libs/shared_lib/src/shared_lib/hardware/: __init__.py  actuator.py  chassis.py  fusion_motor.py  fusion_servo.py  fusion_telemetry.py  gimbal.py  gimbal_control.py  gpiozero_setup.py  my_servo.py  pan_control.py  pan_mount.py  picarx_chassis.py  picarx_motor.py  robo_hat_servo.py  robo_hat_telemetry.py  servo.py  single_motor_chassis.py  telemetry.py  vilib_camera.py
libs/shared_lib/src/shared_lib/networking/: __init__.py  robot_server.py  telemetry_publisher.py  telemetry_streamer.py
libs/shared_lib/src/shared_lib/tracking/: __init__.py  pan_tracker.py  target_follower.py
libs/shared_lib/tests/: test_core.py  test_drive_state.py  test_follow_coordinator.py  test_gimbal.py  test_hardware_telemetry.py  test_my_servo.py  test_pan_tracker.py  test_picarx_chassis.py  test_picarx_motor.py  test_pid.py  test_robot_server.py  test_target_follower.py  test_telemetry.py  test_telemetry_streamer.py
