[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crawler"
version = "0.1.0"
description = "Crawler app that drives a single-motor chassis from a robot socket server"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "ps-bot"}]
dependencies = ["shared-lib"]

[project.scripts]
crawler = "crawler.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
