[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zero-servo"
version = "0.1.0"
description = "Interactive servo zero finder"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "ps-bot"}]
dependencies = ["shared-lib"]

[project.scripts]
zero-servo = "zero_servo.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
